old_tests/fail/instance_not_found/main.sk
module Main where

data Boo = Boo

class Bar a

foo a :: (Bar a) => a -> ()
foo a = ()

main = foo Boo